feat(component): 添加构件预览功能并优化保存流程
- 新增 ComponentPreviewState 和 ComponentPreviewRenderer 实现预览功能
- 添加 HudToast 类提供 HUD 通知功能
- 重构 ComponentTool 实现预览放置、锚点管理和